--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,25 @@
-test:
-  stage: test
+stages:
+  - build
+
+build:
+  stage: build
   tags:
     - docker
-  image: tarantool/tarantool:1
-
+  image: centos:7
+  variables:
+    BUNDLE_VERSION: "1.10.3-32-g63e5bb2"
   before_script:
-    - apk add --no-cache make cmake gcc g++ git python3
-    - pip3 install -r test/requirements.txt
+    - echo "Using tarantool-enterprise-bundle ${BUNDLE_VERSION}"
+    - curl -O -L https://tarantool:${DOWNLOAD_TOKEN}@download.tarantool.io/enterprise/tarantool-enterprise-bundle-${BUNDLE_VERSION}.tar.gz
+    - tar -xzf tarantool-enterprise-bundle-${BUNDLE_VERSION}.tar.gz
+    - rm -rf tarantool-enterprise-bundle-${BUNDLE_VERSION}.tar.gz
+    - export PATH=$PWD/tarantool-enterprise:$PATH
+    - yum -y install https://centos7.iuscommunity.org/ius-release.rpm
+    - yum -y install git gcc make cmake unzip python36u-pip
+    - tarantoolctl rocks install ldoc --server=http://rocks.moonscript.org
+    - export PATH=.rocks/bin:$PATH
+    - pip3.6 install -r test/requirements.txt
   script:
     - tarantoolctl rocks make
+    - make doc
     - pytest -v
