Simplify building doc
* Remove excess options
* Find ldoc binary automatically

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,18 +18,23 @@ file(GLOB_RECURSE LUA_FILES
 ## API doc ####################################################################
 ###############################################################################
 
+if(DEFINED ENV{CMAKE_LDOC_FIND_REQUIRED})
+  set(LDOC_FIND_REQUIRED "$ENV{CMAKE_LDOC_FIND_REQUIRED}")
+endif()
+find_package(Ldoc)
+
 set(DOC_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/doc/index.html)
 
 add_custom_command(
   OUTPUT DOC_OUTPUT
-  COMMAND ldoc -t "${PROJECT_NAME}-${version}" -p "${PROJECT_NAME} (${version})" --all .
+  COMMAND ${LDOC} --all .
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
   DEPENDS ${LUA_FILES}
   COMMENT "Building API documentation"
   VERBATIM
 )
 
-if(BUILD_DOC)
+if(LDOC_FOUND)
   add_custom_target(doc ALL
     DEPENDS DOC_OUTPUT)
 else()
