--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
     env:
       ROCKS_USERNAME: ${{ secrets.ROCKS_USERNAME }}
       ROCKS_PASSWORD: ${{ secrets.ROCKS_PASSWORD }}
+      CMAKE_LDOC_FIND_REQUIRED: 'YES'
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v2
@@ -40,7 +41,7 @@ jobs:
           flake8 test --ignore=E501
 
       - name: Build
-        run: tarantoolctl rocks make BUILD_DOC=YES
+        run: tarantoolctl rocks make
 
       - name: Tests
         run: pytest -v
