--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,67 +1,61 @@
-name: Build and Test
+name: Test
 
 on:
-  pull_request:
   push:
-    branches:
-      - master
-    tags:
-      - '*'
+  workflow_dispatch:
 
 jobs:
   test:
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [ubuntu-latest]
-        tarantool: ['1.10', '2.6']
+        runs-on: [ubuntu-20.04]
+        tarantool: ['1.10', '2.4', '2.5', '2.6', '2.7']
     runs-on: ${{ matrix.runs-on }}
     env:
-      ROCKS_USERNAME: ${{ secrets.ROCKS_USERNAME }}
-      ROCKS_PASSWORD: ${{ secrets.ROCKS_PASSWORD }}
       CMAKE_LDOC_FIND_REQUIRED: 'YES'
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Install dependencies (pytest)
-        run: pip install -r test/requirements.txt
-      - name: Install dependencies (tarantool)
+      - uses: rosik/setup-tarantool@v1
+        with:
+          tarantool-version: ${{ matrix.tarantool }}
+
+      # Setup python packages
+      - name: Cache pip packages
+        uses: actions/cache@v2
+        id: cache-venv
+        with:
+          path: ./venv
+          key: cache-venv-${{ matrix.runs-on }}-01
+      - name: Run pip install
         run: |
-          curl -L https://tarantool.io/installer.sh | sudo VER=${{ matrix.tarantool }} bash
-          sudo apt install -y tarantool tarantool-dev
-          tarantoolctl rocks install ldoc --server=http://rocks.moonscript.org
-          tarantoolctl rocks install luacheck
-          echo ".rocks/bin" >> $GITHUB_PATH
+          python -m venv ./venv && . ./venv/bin/activate
+          pip install -r test/requirements.txt
+        if: steps.cache-venv.outputs.cache-hit != 'true'
+      - run: echo "$PWD/venv/bin" >> $GITHUB_PATH
 
-      - name: Lint
-        run: |
-          luacheck membership-scm-1.rockspec
-          flake8 test --ignore=E501
+      # Setup luacheck and ldoc
+      - name: Cache rocks
+        uses: actions/cache@v2
+        id: cache-rocks
+        with:
+          path: .rocks/
+          key: cache-rocks-${{ matrix.runs-on }}-01
+      -
+        run: tarantoolctl rocks install luacheck
+        if: steps.cache-rocks.outputs.cache-hit != 'true'
+      -
+        run: tarantoolctl rocks install ldoc --server=https://tarantool.github.io/LDoc/
+        if: steps.cache-rocks.outputs.cache-hit != 'true'
+      - run: echo ".rocks/bin" >> $GITHUB_PATH
 
-      - name: Build
-        run: tarantoolctl rocks make
+      - run: luacheck membership-scm-1.rockspec
+      - run: flake8 test --ignore=E501
+      - run: tarantoolctl rocks make
+      - run: pytest -v
 
-      - name: Tests
-        run: pytest -v
-
-      - name: Release
-        if: >
-          matrix.runs-on == 'ubuntu-latest' &&
-          matrix.tarantool == '1.10' &&
-          (
-            github.ref == 'refs/heads/master' ||
-            startsWith(github.ref, 'refs/tags/')
-          )
-        run: |
-          if [[ ${GITHUB_REF} =~ ^refs/tags/ ]]; then
-            TAG=${GITHUB_REF##*/}
-            ./release.sh $TAG
-            ./upload.sh release/membership-${TAG}-1.rockspec
-            ./upload.sh release/membership-${TAG}-1.all.rock
-          else
-            echo "Ref ${GITHUB_REF} is not a tag"
-          fi
-
-          ./upload.sh membership-scm-1.rockspec
+      # Cleanup cached paths
+      - run: tarantoolctl rocks remove membership
