--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -23,7 +23,7 @@ jobs:
       CMAKE_LDOC_FIND_REQUIRED: 'YES'
     steps:
       - uses: actions/checkout@v2
-      - uses: rosik/setup-tarantool@v1
+      - uses: tarantool/setup-tarantool@v2
         with:
           tarantool-version: '2.5'
 
